--- a/Cue/app/build.gradle
+++ b/Cue/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.dominic.cue"
+        applicationId "com.cueapp.cue.cue"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -24,5 +24,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.firebase:firebase-client-android:2.5.2+'
 }
