--- a/Cue/app/src/main/AndroidManifest.xml
+++ b/Cue/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".FacebookLoginActivity"></activity>
+        <activity android:name=".FacebookLoginActivity" />
+        <activity android:name=".ViewReminderActivity" />
+        <activity android:name=".EditReminderActivity"></activity>
     </application>
 
 </manifest>
