--- a/Cue/app/src/main/AndroidManifest.xml
+++ b/Cue/app/src/main/AndroidManifest.xml
@@ -40,8 +40,18 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".FacebookLoginActivity" />
-        <activity android:name=".ViewReminderActivity" />
-        <activity android:name=".EditReminderActivity"></activity>
+        <activity android:name=".ViewReminderActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cueapp.cue.cue.MainActivity" />
+        </activity>
+        <activity android:name=".EditReminderActivity"
+            android:parentActivityName=".ViewReminderActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cueapp.cue.cue.ViewReminderActivity" />
+        </activity>
     </application>
 
 </manifest>
